# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-05-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add the total availability to the CloudI Service API function
      services_status by only excluding the restarting time during each
      time period
    * Make the CloudI Service API function services_status return format
      more minimal based on the values currently available

2018-05-25 Michael Truog   <mjtruog at protonmail dot com>

    * Allow the CloudI Service API function services_status to return
      all service status information when an empty list is used
    * Add the downtime spent restarting and updating to the
      CloudI Service API function services_status

2018-05-22 Michael Truog   <mjtruog at protonmail dot com>

    * Fix bug with CloudI Service API function services_update that
      prevented the command-line argument from being updated for its
      use when calling the aspects_init_after functions
      (i.e., after the update causes a new OS process to start)
    * Fix bug with CloudI Service API function services_search when
      a scope is provided that doesn't exist

2018-05-21 Michael Truog   <mjtruog at protonmail dot com>

    * Change the CloudI Service API function services_status by
      splitting the availability values into running values
      (representing uptime_running) and updated values
      (uptime_running minus any elapsed time during updates)
    * Fix timeout_terminate limit_min/limit_max presence in
      the view of a service's configuration

2018-05-18 Michael Truog   <mjtruog at protonmail dot com>

    * Fix restart_count_total bug with recent uptime additions

2018-05-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add 33.3% availability level to the CloudI Service API
      function services_status

2018-05-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add availability information to the CloudI Service API
      function services_status based on the uptime_running value