@@ -8,6 +8,8 @@
       time period
     * Make the CloudI Service API function services_status return format
       more minimal based on the values currently available
+    * Fix the CloudI Service API function services_status downtime due to
+      updating so it properly considers the availability time period
 
 2018-05-25 Michael Truog   <mjtruog at protonmail dot com>
 
